--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,28 +28,24 @@ gl_texture_multisample_array = []
 headless = []
 
 [dependencies.glutin]
-version = "0.1.6"
 features = ["window"]
 optional = true
 
 [dependencies.cgmath]
-version = "0.2.0"
 optional = true
 
 [dependencies.nalgebra]
-version = "0.2.14"
 optional = true
 
 [dependencies.image]
-version = "0.3.9"
 optional = true
 
 [dependencies]
-lazy_static = "0.1"
-gl_common = "0.0.4"
-libc = "0.1"
-smallvec = "0.1.4"
+lazy_static = "*"
+gl_common = "*"
+libc = "*"
+smallvec = "*"
 
 [build-dependencies]
-gl_generator = "0.0.25"
-khronos_api = "0.0.5"
+gl_generator = "*"
+khronos_api = "*"
